add workaround for PR/39175(Curses regression causes disoptimal and confusing output), act as rev1.25 does when wcwidth == 1.